<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lhr.teethHospital.ui.memberInformation.MemberInformationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <com.lhr.teethHospital.util.widget.TitleBarWidget
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:titleText="@string/patient_information"
            app:showBack="visible"
            app:showCamera="visible"
            app:showEdit="gone" />

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleBar"
            android:src="@drawable/person"
            app:tint="@color/primaryBlack" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@+id/imageAvatar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleBar"
            app:layout_constraintBottom_toTopOf="@+id/textCleanRecord">
            <!--        <TextView-->
            <!--            android:id="@+id/textPatientName"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="0dp"-->
            <!--            app:layout_constraintHeight_percent="0.5"-->
            <!--            app:layout_constraintLeft_toLeftOf="parent"-->
            <!--            app:layout_constraintRight_toRightOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent"-->
            <!--            android:background="@null"-->
            <!--            android:gravity="center_vertical"-->
            <!--            android:text="@string/patient_name"-->
            <!--            android:textColor="@color/primaryBlue"-->
            <!--            android:textStyle="bold"-->
            <!--            android:textSize="25dp"/>-->


            <TextView
                android:id="@+id/textPatientNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/patient_number"
                android:textColor="@color/primaryBlack"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textCleanRecord"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
            android:background="@null"
            android:gravity="center"
            android:text="@string/clean_record"
            android:textColor="@color/primaryBlack"
            android:textStyle="bold"
            android:textSize="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCleanRecord"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textCleanRecord"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
