<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lhr.teethHospital.ui.editPatientInformation.EditPatientInformationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainTitleBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/underline">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/OptionsTint"
                android:src="@drawable/navigate_before" />

            <TextView
                android:id="@+id/textPatientInformation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@+id/imageBack"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:text="@string/patient_information"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="25dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrainTitleBar"
            android:src="@drawable/person" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintHospitalName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
            android:background="@drawable/top_underline"
            android:padding="1dp">

            <TextView
                android:id="@+id/textHospitalName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/hospital_name_input"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editHospitalName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@+id/textHospitalName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPatientNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintHospitalName"
            android:background="@drawable/top_underline"
            android:padding="1dp">

            <TextView
                android:id="@+id/textPatientNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/patient_number_input"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editPatientNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@+id/textPatientNumber"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintPatientNumber"
            android:background="@drawable/top_underline"
            android:padding="1dp">

            <TextView
                android:id="@+id/textGender"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/gender_input"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editGender"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@+id/textGender"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintBirthday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintGender"
            android:background="@drawable/top_underline"
            android:padding="1dp">

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/birthday_input"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editBirthday"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@+id/textBirthday"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                android:textColor="@color/seed"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonSaveInformation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintTop_toBottomOf="@+id/constraintBirthday"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/save_information"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
