<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainClass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/underline" >
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/OptionsTint"
            android:src="@drawable/navigate_before" />

        <TextView
            android:id="@+id/textPatientInformation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@+id/imageBack"
            app:layout_constraintRight_toLeftOf="@+id/imageEdit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:text="@string/patient_information"
            android:textColor = "@color/brown"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/textPatientInformation"
            app:layout_constraintRight_toLeftOf="@+id/imageAdd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/OptionsTint"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/edit"/>

        <ImageView
            android:id="@+id/imageAdd"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/OptionsTint"
            android:src="@drawable/camera"/>

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            style="@style/OptionsTint"
            android:src="@drawable/delete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrainClass"
        android:src="@drawable/person"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/imageAvatar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrainClass"
        app:layout_constraintBottom_toTopOf="@+id/textCleanRecord">
<!--        <TextView-->
<!--            android:id="@+id/textPatientName"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintHeight_percent="0.5"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:background="@null"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="@string/patient_name"-->
<!--            android:textColor="@color/brown"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="25dp"/>-->


        <TextView
            android:id="@+id/textPatientNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/patient_number"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:textSize="20dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textCleanRecord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
        android:background="@null"
        android:gravity="center"
        android:text="@string/clean_record"
        android:textColor = "@color/brown"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCleanRecord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textCleanRecord"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>